# Perevod

./: .env  .env.example  .gitignore  AGENTS.md  README.md  SECURITY.md  changelog.txt  cli.py  combined_program_files.txt  commit_message.txt  config.py  create_combined_file.py  deep-research-report.md  delete_final_cleanup.py  graph_runner.py  gui.py  main.py  project_manager.py  pyproject.toml  requirements.txt  run.py  start.bat  translation_projects.json  translator.py  План.txt  ошибка.txt  ошибки.txt  сделать.txt
.sentrux/: rules.toml
NovelTranslator.egg-info/: PKG-INFO  SOURCES.txt
Perevod.egg-info/: SOURCES.txt  entry_points.txt
_project_files/: projects_main.db
agents/: nodes.py  reranker.py  semantic_chunker.py  state.py  tools.py
database/: database_manager.py  models.py
docs/: adr-2026-05-27-workflow-reliability-invariants.md  building-better-novel-translator.md
knowledge_base/: knowledge_base_manager.py
program_files_for_neronka/: agents_nodes.py.txt  agents_semantic_chunker.py.txt  agents_state.py.txt  agents_tools.py.txt  agents_translator.py.txt  changelog.txt.txt  cli.py.txt  config.py.txt  database_database_manager.py.txt  database_models.py.txt  error_codes.py.txt  graph_runner.py.txt  gui.py.txt  gui_base_editor_window.py.txt  gui_bible_editor.py.txt  gui_dictionary_editor.py.txt  knowledge_base_knowledge_base_manager.py.txt  main.py.txt  main_gui.py.txt  project_manager.py.txt  requirements.txt.txt  scripts_migrate_data.py.txt  src_Perevod_agents_tools.py.txt  src_Perevod_agents_translator.py.txt  src_Perevod_constants.py.txt  src_Perevod_database_database_manager.py.txt  src_Perevod_graph_runner.py.txt  src_Perevod_gui_base_editor_window.py.txt  src_Perevod_gui_main_window.py.txt  src_Perevod_gui_paginated_editor.py.txt  src_Perevod_knowledge_base_knowledge_base_manager.py.txt  src_Perevod_project_manager.py.txt  src_Perevod_requirements.txt.txt  src_Perevod_setup.py.txt  src_Perevod_translation.log.txt  src_Perevod_update_files.py.txt  tests_conftest.py.txt  tests_test_agents.py.txt  tests_test_graph_runner.py.txt  (+6 more)
(+152 files in other folders)
